WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260258
[IFC] TextOnlyLineBuilder should handle content with '-webkit-line-break: after-white-space'
https://bugs.webkit.org/show_bug.cgi?id=260258
Summary
[IFC] TextOnlyLineBuilder should handle content with '-webkit-line-break: aft...
alan
Reported
2023-08-16 07:47:55 PDT
ssia
Attachments
Patch
(3.64 KB, patch)
2023-08-16 08:06 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(3.64 KB, patch)
2023-08-16 13:01 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-08-16 08:06:35 PDT
Created
attachment 467291
[details]
Patch
alan
Comment 2
2023-08-16 13:01:06 PDT
Created
attachment 467297
[details]
[fast-cq]Patch
Radar WebKit Bug Importer
Comment 3
2023-08-16 13:13:54 PDT
<
rdar://problem/113984350
>
EWS
Comment 4
2023-08-16 14:37:14 PDT
Committed
266961@main
(0e791adb613f): <
https://commits.webkit.org/266961@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467297
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug