[IFC] TextOnlyLineBuilder should handle content with '-webkit-line-break: after-white-space' https://bugs.webkit.org/show_bug.cgi?id=260258

Reviewed by Antti Koivisto.

This is very similar to the already supported "white-space: break-spaces" line breaking behavior.

* Source/WebCore/layout/formattingContexts/inline/TextOnlyLineBuilder.cpp:
(WebCore::Layout::TextOnlyLineBuilder::placeInlineTextContent):

Canonical link: https://commits.webkit.org/266961@main